# einktouch

./: CMakeLists.txt  README.md  main.cpp
cmake/modules/: Findlibgpiodcxx.cmake
event/: CMakeLists.txt  touch.cpp  touch.h
geometry/: CMakeLists.txt  line.cpp  line.h  point.cpp  point.h  rect.cpp  rect.h  size.cpp  size.h
hardware/: CMakeLists.txt  gt1158.cpp  gt1158.h  i2c.cpp  i2c.h  spi.cpp  spi.h  waveshare_eink.cpp  waveshare_eink.h
ui/: CMakeLists.txt  bitmap.cpp  bitmap.h  bmp_image.cpp  bmp_image.h  button.cpp  button.h  element.cpp  element.h  painter.cpp  painter.h
util/: CMakeLists.txt  byte_util.h  math_util.h
